# spotify-rediscover

./: .gitignore  README.md  README_tests.md  pyproject.toml  remove-patterns.txt  report.html  setup.py  spotify_analyzer.sh  test_implementation.md
spotify_rediscover_cli.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  html_report.py  spotify_analysis.py  spotify_rediscover_cli.py
tests/: test_plan.md  test_spotify_rediscover_cli.py  test_spotify_rediscover_cli_consolidated.md
