[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-rediscover"
version = "0.1.0"
description = "A tool for analyzing Spotify listening history"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
spotify-rediscover = "spotify_rediscover_cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["src"]